# c-mqtt

./: .gitignore  CMakeLists.txt  README.md
include/: mqtt.h  pack.h
src/: mqtt.c  pack.c
tests/: CMakeLists.txt  pack_test.c
